// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Domain/EntityEditor Deleted Foo 1`] = `
<form
  className="dd segment has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-_name"
        onChange={[Function]}
        type="text"
        value="Foo deleted"
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <input
          className="dd text-body1 input"
          id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-title"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-tags"
    >
      tags
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div>
          <input
            className="dd text-body1 input"
            id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-tags"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-bar"
    >
      bar
    </label>
    <div
      className="dd form-control"
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          className="dd button text-button "
          id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-bar"
          onClick={[Function]}
          type="button"
        >
          Select entity
        </button>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-bars"
    >
      bars
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="dd button text-button "
            id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-bars"
            onClick={[Function]}
            type="button"
          >
            Select entity
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-annotatedBar"
    >
      annotatedBar
    </label>
    <div
      className="dd form-control"
    >
      <div
        className="dd segment"
      >
        <div>
          <button
            className="dd button text-button "
            id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-annotatedBar"
            onClick={[Function]}
            type="button"
          >
            Add value item
             
            <span
              className="dd icon chevron-down"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-annotatedBars"
    >
      annotatedBars
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div
          className="dd segment"
        >
          <div>
            <button
              className="dd button text-button "
              id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-annotatedBars"
              onClick={[Function]}
              type="button"
            >
              Add value item
               
              <span
                className="dd icon chevron-down"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-nested"
    >
      nested
    </label>
    <div
      className="dd form-control"
    >
      <div
        className="dd segment"
      >
        <div>
          <button
            className="dd button text-button "
            id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-nested"
            onClick={[Function]}
            type="button"
          >
            Add value item
             
            <span
              className="dd icon chevron-down"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`Storyshots Domain/EntityEditor Full Foo 1`] = `
<form
  className="dd segment has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
        onChange={[Function]}
        type="text"
        value="Foo 1"
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <input
          className="dd text-body1 input"
          id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
          onChange={[Function]}
          type="text"
          value="Hello"
        />
        <button
          className="dd button icon-button"
          onClick={[Function]}
          title="Clear"
          type="button"
        >
          <span
            className="dd icon remove"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags"
    >
      tags
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div>
          <input
            className="dd text-body1 input"
            id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags"
            onChange={[Function]}
            type="text"
            value="one"
          />
          <button
            className="dd button icon-button"
            onClick={[Function]}
            title="Remove item"
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
        <div>
          <input
            className="dd text-body1 input"
            id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags-1"
            onChange={[Function]}
            type="text"
            value="two"
          />
          <button
            className="dd button icon-button"
            onClick={[Function]}
            title="Remove item"
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
        <div>
          <input
            className="dd text-body1 input"
            id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags-2"
            onChange={[Function]}
            type="text"
            value="three"
          />
          <button
            className="dd button icon-button"
            onClick={[Function]}
            title="Remove item"
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
        <div>
          <input
            className="dd text-body1 input"
            id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags-3"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-bar"
    >
      bar
    </label>
    <div
      className="dd form-control"
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          className="dd button text-button "
          id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-bar"
          onClick={[Function]}
          type="button"
        >
          Bar 1
        </button>
        <button
          className="dd button icon-button"
          onClick={[Function]}
          title="Remove entity"
          type="button"
        >
          <span
            className="dd icon remove"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-bars"
    >
      bars
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="dd button text-button "
            id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-bars"
            onClick={[Function]}
            type="button"
          >
            Bar 1
          </button>
          <button
            className="dd button icon-button"
            onClick={[Function]}
            title="Remove entity"
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="dd button text-button "
            id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-bars-1"
            onClick={[Function]}
            type="button"
          >
            Bar 2
          </button>
          <button
            className="dd button icon-button"
            onClick={[Function]}
            title="Remove entity"
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="dd button text-button "
            id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-bars-2"
            onClick={[Function]}
            type="button"
          >
            Select entity
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar"
    >
      annotatedBar
    </label>
    <div
      className="dd form-control"
    >
      <div
        className="dd segment"
      >
        <p
          className="dd text-caption"
        >
          AnnotatedBar 
          <button
            className="dd button icon-button"
            data-testid="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar.remove"
            onClick={[Function]}
            title="Remove value item"
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </p>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar-annotation"
          >
            annotation
          </label>
          <div
            className="dd form-control"
          >
            <div>
              <input
                className="dd text-body1 input"
                id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar-annotation"
                onChange={[Function]}
                type="text"
                value="Annotation"
              />
              <button
                className="dd button icon-button"
                onClick={[Function]}
                title="Clear"
                type="button"
              >
                <span
                  className="dd icon remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar-bar"
          >
            bar
          </label>
          <div
            className="dd form-control"
          >
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              <button
                className="dd button text-button "
                id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar-bar"
                onClick={[Function]}
                type="button"
              >
                Bar 2
              </button>
              <button
                className="dd button icon-button"
                onClick={[Function]}
                title="Remove entity"
                type="button"
              >
                <span
                  className="dd icon remove"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars"
    >
      annotatedBars
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div
          className="dd segment"
        >
          <p
            className="dd text-caption"
          >
            AnnotatedBar 
            <button
              className="dd button icon-button"
              data-testid="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars.remove"
              onClick={[Function]}
              title="Remove value item"
              type="button"
            >
              <span
                className="dd icon remove"
              />
            </button>
          </p>
          <div>
            <label
              className="dd text-subtitle1"
              htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-annotation"
            >
              annotation
            </label>
            <div
              className="dd form-control"
            >
              <div>
                <input
                  className="dd text-body1 input"
                  id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-annotation"
                  onChange={[Function]}
                  type="text"
                  value="First"
                />
                <button
                  className="dd button icon-button"
                  onClick={[Function]}
                  title="Clear"
                  type="button"
                >
                  <span
                    className="dd icon remove"
                  />
                </button>
              </div>
            </div>
          </div>
          <div>
            <label
              className="dd text-subtitle1"
              htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-bar"
            >
              bar
            </label>
            <div
              className="dd form-control"
            >
              <div
                style={
                  Object {
                    "display": "flex",
                  }
                }
              >
                <button
                  className="dd button text-button "
                  id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-bar"
                  onClick={[Function]}
                  type="button"
                >
                  Bar 1
                </button>
                <button
                  className="dd button icon-button"
                  onClick={[Function]}
                  title="Remove entity"
                  type="button"
                >
                  <span
                    className="dd icon remove"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="dd segment"
        >
          <p
            className="dd text-caption"
          >
            AnnotatedBar 
            <button
              className="dd button icon-button"
              data-testid="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-1.remove"
              onClick={[Function]}
              title="Remove value item"
              type="button"
            >
              <span
                className="dd icon remove"
              />
            </button>
          </p>
          <div>
            <label
              className="dd text-subtitle1"
              htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-1-annotation"
            >
              annotation
            </label>
            <div
              className="dd form-control"
            >
              <div>
                <input
                  className="dd text-body1 input"
                  id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-1-annotation"
                  onChange={[Function]}
                  type="text"
                  value="Second"
                />
                <button
                  className="dd button icon-button"
                  onClick={[Function]}
                  title="Clear"
                  type="button"
                >
                  <span
                    className="dd icon remove"
                  />
                </button>
              </div>
            </div>
          </div>
          <div>
            <label
              className="dd text-subtitle1"
              htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-1-bar"
            >
              bar
            </label>
            <div
              className="dd form-control"
            >
              <div
                style={
                  Object {
                    "display": "flex",
                  }
                }
              >
                <button
                  className="dd button text-button "
                  id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-1-bar"
                  onClick={[Function]}
                  type="button"
                >
                  Bar 2
                </button>
                <button
                  className="dd button icon-button"
                  onClick={[Function]}
                  title="Remove entity"
                  type="button"
                >
                  <span
                    className="dd icon remove"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="dd segment"
        >
          <div>
            <button
              className="dd button text-button "
              id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-2"
              onClick={[Function]}
              type="button"
            >
              Add value item
               
              <span
                className="dd icon chevron-down"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-nested"
    >
      nested
    </label>
    <div
      className="dd form-control"
    >
      <div
        className="dd segment"
      >
        <div>
          <button
            className="dd button text-button "
            id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-nested"
            onClick={[Function]}
            type="button"
          >
            Add value item
             
            <span
              className="dd icon chevron-down"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`Storyshots Domain/EntityEditor New Foo 1`] = `
<form
  className="dd segment has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="new-entity-123-_name"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <input
          className="dd text-body1 input"
          id="new-entity-123-title"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-tags"
    >
      tags
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div>
          <input
            className="dd text-body1 input"
            id="new-entity-123-tags"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-bar"
    >
      bar
    </label>
    <div
      className="dd form-control"
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          className="dd button text-button "
          id="new-entity-123-bar"
          onClick={[Function]}
          type="button"
        >
          Select entity
        </button>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-bars"
    >
      bars
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="dd button text-button "
            id="new-entity-123-bars"
            onClick={[Function]}
            type="button"
          >
            Select entity
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-annotatedBar"
    >
      annotatedBar
    </label>
    <div
      className="dd form-control"
    >
      <div
        className="dd segment"
      >
        <div>
          <button
            className="dd button text-button "
            id="new-entity-123-annotatedBar"
            onClick={[Function]}
            type="button"
          >
            Add value item
             
            <span
              className="dd icon chevron-down"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-annotatedBars"
    >
      annotatedBars
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div
          className="dd segment"
        >
          <div>
            <button
              className="dd button text-button "
              id="new-entity-123-annotatedBars"
              onClick={[Function]}
              type="button"
            >
              Add value item
               
              <span
                className="dd icon chevron-down"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-nested"
    >
      nested
    </label>
    <div
      className="dd form-control"
    >
      <div
        className="dd segment"
      >
        <div>
          <button
            className="dd button text-button "
            id="new-entity-123-nested"
            onClick={[Function]}
            type="button"
          >
            Add value item
             
            <span
              className="dd icon chevron-down"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="dd button text-button bg-primary"
    disabled={true}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`Storyshots Domain/EntityEditor Slow Full Foo 1`] = `
<div
  className="dd loader"
/>
`;
